New features/changes: - Interceptor.py modified to work with dynamic IP assignment by docker engine. It now has a new option named 'container' that enables the user to use it in a container. The requisite to use it this way is to write a docker-compose.yml that invokes it with an entrypoint like the one that follows:
entrypoint: ["python3", "Interceptor.py", "--mode", "container", "--compose", "docker-compose.yml"]

and to copy the docker-compose.yml itself to the docker container with the following line:

volumes:
   - "./docker-compose.yml:/WAPT-Dataset-Collector/code/docker-compose.yml"

the docker-compose.yml will be employed to obtain the name of the containers attached to the network and after that these names will be employed to obtain their IP addresses by using the Python socket library exploiting the DNS.
- docker-compose.yml has been modified to execute 'interceptor' and 'benchmark' containers correctly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,42 @@
-version: '2'
+# If having any issues with the docker network:
+# https://github.com/docker/for-win/issues/2194
+
 services:
-  wavsep:
-    container_name: wavsep
+  interceptor:
+   container_name: interceptor
+   image: interceptor:latest
+   entrypoint: ["python3", "Interceptor.py", "--mode", "container", "--compose", "docker-compose.yml"]
+   
+   # binding host docker sock to this container to send http requests to host's docker engine.
+   # this practise could offer to an attacker the chance to penetrate into the host system:
+   # https://stackoverflow.com/questions/40844197/what-is-the-docker-security-risk-of-var-run-docker-sock 
+   #volumes:
+   #- "/var/run/docker.sock:/var/run/docker.sock"
+   
+   # docker-compose.yml will be employed to make the other containers name known to this one.
+   volumes:
+   - "./docker-compose.yml:/WAPT-Dataset-Collector/code/docker-compose.yml"
+   ports:
+    - "8888:8888"
+   networks:
+     - penetration_net
+   # this enforces docker to build this container after that the others on which it depends.
+   depends_on:
+    - benchmark
+     
+  benchmark:
+    container_name: benchmark
     image: wavsep:latest
     restart: always
     ports:
      - "8080:8080"
     networks:
-      penetration_net:
-        ipv4_address: 10.5.0.5
-
-  interceptor:
-    container_name: interceptor
-    image: interceptor:latest
-    entrypoint: ["python3", "Interceptor.py", "-ph", "10.5.0.6", "-pp", "8888", "-bh", "10.5.0.5", "-bp", "8080"]    
-    ports:
-     - "8888:8888"
-    networks:
-      penetration_net:
-        ipv4_address: 10.5.0.6
-
+     - penetration_net
+        
+  
+   
 networks:
   penetration_net:
+    name: 'penetration_net'
     driver: bridge
-    ipam:
-     config:
-       - subnet: 10.5.0.0/16
-         gateway: 10.5.0.1
+    
